--- a/ProjetoIA - Presencas/static/style.css
+++ b/ProjetoIA - Presencas/static/style.css
@@ -2,25 +2,25 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start; /* Mudança aqui */
+    justify-content: flex-start; 
     min-height: 100vh;
-    padding-top: 10vh; /* Espaço no topo */
+    padding-top: 10vh; 
 }
 
 .table-container {
-    margin: 20px 0; /* Espaço acima e abaixo da tabela */
+    margin: 20px 0; 
     padding: 15px;
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
     background-color: white;
-    width: 60%; /* Ajuste a largura da tabela */
-    max-width: 600px; /* Largura máxima */
+    width: 60%; 
+    max-width: 600px; 
 }
 
 .table {
     width: 100%;
-    text-align: center; /* Centralizar texto horizontalmente */
+    text-align: center; 
 }
 
 .table th, .table td {
@@ -30,10 +30,10 @@ body {
 }
 
 .button-container {
-    width: 100%; /* Garantir que os botões sejam centralizados */
+    width: 100%; 
     display: flex;
     justify-content: center;
-    margin-top: 20px; /* Espaço pequeno acima dos botões */
+    margin-top: 20px;
 }
 
 .checkbox {
@@ -44,16 +44,6 @@ body {
     text-align: center;
     font-size: 16px;
     line-height: 20px;
-}
-
-.unchecked {
-    background-color: red;
-    color: white;
-}
-
-.checked {
-    background-color: green;
-    color: white;
 }
 
 
