Retirado o botão Aplicar Presença que não estava sendo utilizado, Alimentado Dataset Vini.

--- a/ProjetoIA - Presencas/templates/index.html
+++ b/ProjetoIA - Presencas/templates/index.html
@@ -36,7 +36,7 @@
     
     <div class="button-container">
         <button id="startRecognitionButton" class="btn btn-primary btn-lg mr-2">Iniciar Reconhecimento Facial</button>
-        <button id="sendDataButton" class="btn btn-success btn-lg">Aplicar Presença</button>
+        <!-- <button id="sendDataButton" class="btn btn-success btn-lg">Aplicar Presença</button> -->
     </div>    
 
     <script src="/static/script.js"></script>
